src/test/deca/context/valid/custom/Declaration/decl_bool.deca
// Description:
//   Declaration of a boolean and print it on the standard output.
// Results:
//    Line 11: display a boolean on the standard output.
//
// History:
//    created on 11/01/2022

{
   boolean b = true;
   println(b);
}
